--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "nuxt3-interpolation",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
+  "main": "dist/module.js",
+  "directories": {
+    "lib": "dist"
+  },
+  "files": [
+    "dist/*.js"
+  ],
   "scripts": {
     "dev": "nuxi dev",
+    "build": "rollup -c",
     "release": "standard-version --sign && git push --follow-tags && npm publish"
   },
   "repository": {
@@ -17,10 +25,24 @@
     "url": "https://github.com/daliborgogic/nuxt3-interpolation/issues"
   },
   "homepage": "https://github.com/daliborgogic/nuxt3-interpolation#readme",
-  "devDependencies": {
-    "nuxt3": "^3.0.0-27288761.d3fb512"
-  },
   "dependencies": {
-    "standard-version": "^9.3.2"
+    "nuxt3": "^3.0.0-27288761.d3fb512",
+    "standard-version": "^9.3.2",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.15.0",
+    "@kentico/kontent-delivery": "^11.0.0-5",
+    "@nuxt/kit": "^0.6.4",
+    "@open-wc/building-rollup": "^2.0.1",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "babel-cli": "^6.26.0",
+    "deepmerge": "^4.2.2",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.58.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4"
   }
 }
