--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt3-interpolation",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "main": "dist/module.js",
   "directories": {
@@ -27,12 +27,13 @@
   "homepage": "https://github.com/daliborgogic/nuxt3-interpolation#readme",
   "dependencies": {
     "nuxt3": "^3.0.0-27288761.d3fb512",
+    "@nuxt/kit": "^0.6.4"
+  },
+  "devDependencies": {
     "standard-version": "^9.3.2",
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
-    "@kentico/kontent-delivery": "^11.0.0-5",
-    "@nuxt/kit": "^0.6.4",
     "@open-wc/building-rollup": "^2.0.1",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
