--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
   "name": "nuxt3-interpolation",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
-  "main": "dist/module.js",
-  "directories": {
-    "lib": "dist"
-  },
-  "files": [
-    "dist/*.js"
-  ],
   "scripts": {
     "dev": "nuxi dev",
-    "build": "rollup -c",
+    "build": "tsup",
     "release": "standard-version --sign && git push --follow-tags && npm publish"
   },
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "require": "./index.cjs",
+      "import": "./dist/index.mjs"
+    }
+  },
+  "main": "./index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "index.cjs"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/daliborgogic/nuxt3-interpolation.git"
@@ -26,24 +33,12 @@
   },
   "homepage": "https://github.com/daliborgogic/nuxt3-interpolation#readme",
   "dependencies": {
-    "nuxt3": "^3.0.0-27288761.d3fb512",
-    "@nuxt/kit": "^0.6.4"
+    "@nuxt/kit": "npm:@nuxt/kit-edge@latest"
   },
   "devDependencies": {
+    "nuxt3": "^3.0.0-27288761.d3fb512",
     "standard-version": "^9.3.2",
-    "@babel/core": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-typescript": "^7.15.0",
-    "@open-wc/building-rollup": "^2.0.1",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^21.0.1",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "@rollup/plugin-typescript": "^8.3.0",
-    "babel-cli": "^6.26.0",
-    "deepmerge": "^4.2.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.58.0",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4"
+    "tsup": "^5.7.3",
+    "typescript": "^4.5.2"
   }
 }
