--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "nuxt3-interpolation",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "",
+  "main": "dist/index.mjs",
+  "directories": {
+    "lib": "dist"
+  },
   "scripts": {
     "dev": "nuxi dev",
     "build": "tsup",
@@ -21,7 +25,7 @@
   },
   "devDependencies": {
     "nuxt3": "^3.0.0-27288761.d3fb512",
-    "nuxt3-interpolation": "^1.0.7",
+    "nuxt3-interpolation": "^1.0.8",
     "standard-version": "^9.3.2",
     "tsup": "^5.7.3",
     "typescript": "^4.5.2"
