--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "nuxt3-interpolation",
-  "version": "1.0.11",
+  "version": "1.0.12",
   "description": "",
-  "main": "dist/index.mjs",
-  "directories": {
-    "lib": "dist"
+  "exports": {
+    ".": {
+      "require": "./index.cjs",
+      "import": "./dist/index.mjs"
+    }
   },
+  "main": "./index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "index.cjs"
+  ],
   "scripts": {
     "dev": "nuxi dev",
     "build": "tsup",
@@ -24,8 +33,8 @@
     "@nuxt/kit": "npm:@nuxt/kit-edge@latest"
   },
   "devDependencies": {
-    "nuxt3": "^3.0.0-27288761.d3fb512",
-    "nuxt3-interpolation": "^1.0.10",
+    "nuxt3": "latest",
+    "nuxt3-interpolation": "^1.0.11",
     "standard-version": "^9.3.2",
     "tsup": "^5.7.3",
     "typescript": "^4.5.2"
