--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nuxt3-interpolation",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "",
   "exports": {
     ".": {
@@ -30,11 +30,9 @@
   },
   "homepage": "https://github.com/daliborgogic/nuxt3-interpolation#readme",
   "dependencies": {
-    "@nuxt/kit": "npm:@nuxt/kit-edge@latest"
+    "@nuxt/kit": "^0.8.1-edge"
   },
   "devDependencies": {
-    "nuxt3": "latest",
-    "nuxt3-interpolation": "^1.0.11",
     "standard-version": "^9.3.2",
     "tsup": "^5.7.3",
     "typescript": "^4.5.2"
