--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "interpolation",
-  "version": "1.0.15",
+  "name": "nuxt3-interpolation",
+  "version": "1.0.16",
   "description": "",
   "exports": {
     ".": {
